# qt5-cmake-starter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/: main.cpp
